src/ui/assets/styles/components/_leftSearchBox.scss
.leftSearchBox {
	clear: left;

	legend {
		padding-left: 8px;
		padding-right: 8px;
		font-weight: bold;
		background: $alt-color;
		width: 100%;
	}

	div.multiple-choice {
		padding: 2px 0px 2px 0px;
		margin-top: 8px;

		margin-bottom: 0px;
		border-bottom: 1px solid $alt-color;
		width: 100%;

		input {
			margin-left: 8px;
		}

		label {
			margin-left: 45px;
			&:before {
				left: 8px;
			}
			&:after {
				left: 16px;
			}
		}
	}
}

.filters {
	.heading-small {
		margin-top: 6px;
	}
}

.clear-filters {
	float: left;
	clear: left;
	padding: 10px 0;
}

